--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
 <resources>
 
     <string name="app_name">PoloeOS</string>
-	<string name="error_content">Sorry,We were forced to stop because of mistakes.Here are some wrong messages that may help you:\n</string>
+	<string name="error_content">Sorry,We were forced to stop because of errors.Here are some messages about errors that may help you:\n</string>
 
 </resources>
